--- a/WebContent/resources/css/estilo.css
+++ b/WebContent/resources/css/estilo.css
@@ -6,17 +6,17 @@
 }
 .header{
 	height:2px;
-	background-color:#f87323; 	
+	background-color:#808080; 	
 	color: black;
 	font-family: Arial;	
 	text-align: center;
-	padding: 50px;
-	margin-bottom: 10px;
+	padding: 20px;
+	margin-bottom: 30px;
 }
 
 #login-dialog
 {
-	width: 260px;
+	width: 400px;
 	margin:  auto;
 	margin-top: 150px;
 	font-family:Verdana;
@@ -24,7 +24,7 @@
 
 .grid-login
 {
-	background-color:#f87323;
+	background-color:#808080;
 	border-radius:8px;
 	padding: 50px;
 	width: 100%;
@@ -47,14 +47,20 @@
 
 .footer
 {
-	height:200px;
-	background-color:#f87323; 	
+	height:20px;
+	background-color:#808080; 	
 	color: black;
 	font-family: Arial;	
 	text-align: center;
 	padding: 50px;
-	margin-top:50px;
-	margin-bottom: 0;
+	position:fixed;
+	bottom:1%;
+	
+	width:1400px;
+	margin: 0;
+	
+	
+	
 	
 	
 
@@ -82,7 +88,7 @@ li ul
    ul li a {
     display: block;
     text-decoration: none;
-    color: #f87323;
+    color: #808080;
     background: #fff;
     padding: 5px;
     border: 1px solid #ccc; 
