--- a/WebContent/resources/css/estilo.css
+++ b/WebContent/resources/css/estilo.css
@@ -47,25 +47,22 @@
 
 .footer
 {
-	height:20px;
+	height:70px;
 	background-color:#808080; 	
 	color: black;
 	font-family: Arial;	
 	text-align: center;
-	padding: 50px;
-	position:fixed;
-	bottom:1%;
-	
-	width:1400px;
-	margin: 0;
-	
-	
-	
-	
+	position: relative;
+	bottom: 10px;
+	margin: 0 auto;
 	
 
+	
 }
 
+ .footer p{ padding: 20px;}
+ 
+ 
  ul {
     margin: 0;
     padding: 0;
